--- a/test/specs.html
+++ b/test/specs.html
@@ -6,10 +6,10 @@
 
     <title>better-dom specs</title>
 
-    <link rel="stylesheet" type="text/css" href="lib/jasmine-1.3.1/jasmine.css">
+    <link rel="stylesheet" type="text/css" href="../components/jasmine/lib/jasmine-core/jasmine.css">
 
-    <script src="lib/jasmine-1.3.1/jasmine.js"></script>
-    <script src="lib/jasmine-1.3.1/jasmine-html.js"></script>
+    <script src="../components/jasmine/lib/jasmine-core/jasmine.js"></script>
+    <script src="../components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
