--- a/test/suites.html
+++ b/test/suites.html
@@ -32,9 +32,19 @@
     <a href="#" id="test1" data-test="t1"></a>
     <a href="#" id="test2" data-test="t2"></a>
     <a href="#" id="test3" data-test="t3"></a>
+    <div id="sandbox"></div>
 
     <!-- speeds -->
     <script src="speed/get.suite.js"></script>
+    <script src="speed/set.suite.js"></script>
+    <script src="speed/addClass.suite.js"></script>
+    <script src="speed/toggleClass.suite.js"></script>
+    <script src="speed/find.suite.js"></script>
+    <script src="speed/create.suite.js"></script>
+    <script src="speed/append.suite.js"></script>
+    <script src="speed/showhide.suite.js"></script>
+    <script src="speed/each.suite.js"></script>
+
     <script>
       (function() {
         var execBenchmine = function () {
