update karma:watch task, improve test coverage

--- a/test/specs.html
+++ b/test/specs.html
@@ -19,6 +19,7 @@
 
     <!-- include spec files here... -->
     <script src="spec/find.spec.js"></script>
+    <script src="spec/clone.spec.js"></script>
     <script src="spec/contains.spec.js"></script>
     <script src="spec/on.spec.js"></script>
     <script src="spec/off.spec.js"></script>
