improve test coverage

--- a/test/specs.html
+++ b/test/specs.html
@@ -15,6 +15,7 @@
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
     <!-- include source files here... -->
+    <script src="../components/lodash/lodash.js"></script>
     <script src="../src/better-dom.js" data-htc="../src/better-dom.htc"></script>
 
     <!-- include spec files here... -->
