split better-dom into multiple files

--- a/test/specs.html
+++ b/test/specs.html
@@ -16,7 +16,7 @@
 
     <!-- include source files here... -->
     <script src="../node_modules/lodash/lodash.js"></script>
-    <script src="../src/better-dom.js" data-htc="../src/better-dom.htc"></script>
+    <script src="../build/better-dom.js" data-htc="../better-dom.htc"></script>
 
     <!-- include spec files here... -->
     <script src="spec/find.spec.js"></script>
