improve folder structure and Gruntfile.js

--- a/test/suites.html
+++ b/test/suites.html
@@ -25,7 +25,7 @@
 
     <!-- libs -->
     <script src="../components/jquery/jquery.js"></script>
-    <script src="../src/better-dom.js" data-htc="better-dom.htc"></script>
+    <script src="../src/better-dom.js" data-htc="../extra/better-dom.htc"></script>
   </head>
 
   <body>
