--- a/test/specs.html
+++ b/test/specs.html
@@ -38,6 +38,7 @@
     <script src="spec/style.spec.js"></script>
     <script src="spec/extend.spec.js"></script>
     <script src="spec/parseTemplate.spec.js"></script>
+    <script src="spec/mock.spec.js"></script>
 
 </head>
 <body>
