add AMD support

--- a/test/specs.html
+++ b/test/specs.html
@@ -16,7 +16,7 @@
 
     <!-- include source files here... -->
     <script src="../components/lodash/lodash.js"></script>
-    <!--[if IE]><style>html{behavior:url(../build/better-dom.htc)}</style>
+    <!--[if IE]><style>html{-ms-behavior:url(../build/better-dom.htc)}</style>
     <!-->   <script src="../build/better-dom.js"></script><!--<![endif]-->
     
     <!-- include spec files here... -->
