better approach to include script on page + small fixes

--- a/test/specs.html
+++ b/test/specs.html
@@ -38,7 +38,7 @@
     <script src="spec/mock.spec.js"></script>
 
 </head>
-<body style="-ms-behavior: url(../build/better-dom.htc)">
+<body>
     <script type="text/javascript">
     (function() {
         var jasmineEnv = jasmine.getEnv(),
@@ -56,6 +56,10 @@
         };
     })();
     </script>
-    <!--[if !IE]>--><script src="../build/better-dom.js"></script><!--<![endif]-->
+    <script>
+    (function(D,O,M){M=D.documentElement;M.addBehavior?(M.setAttribute("data-htc",
+    O=O.substr(0,O.length-2)+"htc"),M.addBehavior(O)):(M=D.createElement("script"),
+    M.async=!1,M.src=O,D.head.appendChild(M))})(document,"../build/better-dom.js");
+    </script>
 </body>
 </html>
