simplified DOM.ready for IE

--- a/test/specs.html
+++ b/test/specs.html
@@ -36,6 +36,7 @@
     <script src="spec/extend.spec.js"></script>
     <script src="spec/parseTemplate.spec.js"></script>
     <script src="spec/mock.spec.js"></script>
+    <script src="spec/ready.spec.js"></script>
 
 </head>
 <body>
