--- a/test/specs.html
+++ b/test/specs.html
@@ -15,6 +15,8 @@
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
+    <script src="../build/better-dom.js" data-htc="../extra/better-dom.htc"></script>
+
     <!-- include spec files here... -->
     <script src="spec/find.spec.js"></script>
     <script src="spec/clone.spec.js"></script>
