--- a/test/specs.html
+++ b/test/specs.html
@@ -39,6 +39,8 @@
     <script src="spec/parseTemplate.spec.js"></script>
     <script src="spec/mock.spec.js"></script>
     <script src="spec/ready.spec.js"></script>
+    <script src="spec/toquerystring.spec.js"></script>
+    <script src="spec/bind.spec.js"></script>
 
 </head>
 <body>
