--- a/test/specs.html
+++ b/test/specs.html
@@ -41,6 +41,7 @@
     <script src="spec/ready.spec.js"></script>
     <script src="spec/toquerystring.spec.js"></script>
     <script src="spec/bind.spec.js"></script>
+    <script src="spec/collection.spec.js"></script>
 
 </head>
 <body>
