--- a/test/specs.html
+++ b/test/specs.html
@@ -42,6 +42,7 @@
     <script src="spec/toquerystring.spec.js"></script>
     <script src="spec/bind.spec.js"></script>
     <script src="spec/collection.spec.js"></script>
+    <script src="spec/importstyles.spec.js"></script>
 
 </head>
 <body>
