improve test coverage, fix bugs

--- a/test/specs.html
+++ b/test/specs.html
@@ -43,6 +43,7 @@
     <script src="spec/bind.spec.js"></script>
     <script src="spec/collection.spec.js"></script>
     <script src="spec/importstyles.spec.js"></script>
+    <script src="spec/visibility.spec.js"></script>
 
 </head>
 <body>
