--- a/test/specs.html
+++ b/test/specs.html
@@ -44,6 +44,7 @@
     <script src="spec/collection.spec.js"></script>
     <script src="spec/importstyles.spec.js"></script>
     <script src="spec/visibility.spec.js"></script>
+    <script src="spec/i18n.spec.js"></script>
 
 </head>
 <body>
