introduce element.is instead of element.has and element.matches

--- a/test/specs.html
+++ b/test/specs.html
@@ -27,9 +27,9 @@
     <script src="spec/data.spec.js"></script>
     <script src="spec/get.spec.js"></script>
     <script src="spec/set.spec.js"></script>
+    <script src="spec/is.spec.js"></script>
     <script src="spec/traversing.spec.js"></script>
     <script src="spec/classes.spec.js"></script>
-    <script src="spec/matches.spec.js"></script>
     <script src="spec/offset.spec.js"></script>
     <script src="spec/watch.spec.js"></script>
     <script src="spec/create.spec.js"></script>
