fix IE10-related issues, also fix specs.html

--- a/test/specs.html
+++ b/test/specs.html
@@ -6,11 +6,12 @@
 
     <title>better-dom specs</title>
 
-    <link rel="stylesheet" href="../components/jasmine/lib/jasmine-core/jasmine.css">
+    <link rel="stylesheet" href="../.grunt/grunt-contrib-jasmine/jasmine.css">
 
-    <script src="../components/lodash/lodash.js"></script>
-    <script src="../components/jasmine/lib/jasmine-core/jasmine.js"></script>
-    <script src="../components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
+
+    <script src="../node_modules/lodash/lodash.js"></script>
+    <script src="../.grunt/grunt-contrib-jasmine/jasmine.js"></script>
+    <script src="../.grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
