--- a/test/specs.html
+++ b/test/specs.html
@@ -30,7 +30,7 @@
     <script src="spec/set.spec.js"></script>
     <script src="spec/traversing.spec.js"></script>
     <script src="spec/classes.spec.js"></script>
-    <script src="spec/is.spec.js"></script>
+    <script src="spec/matches.spec.js"></script>
     <script src="spec/offset.spec.js"></script>
     <script src="spec/watch.spec.js"></script>
     <script src="spec/create.spec.js"></script>
