small fixes in tests

--- a/test/specs.html
+++ b/test/specs.html
@@ -45,6 +45,7 @@
     <script src="spec/importstyles.spec.js"></script>
     <script src="spec/visibility.spec.js"></script>
     <script src="spec/importstrings.spec.js"></script>
+    <script src="spec/supports.spec.js"></script>
 
 </head>
 <body>
