--- a/test/speed.html
+++ b/test/speed.html
@@ -6,6 +6,7 @@
 
     <title>Benchmark Runner</title>
 
+    <script src="../node_modules/lodash/lodash.js"></script>
     <script src="../node_modules/platform/platform.js"></script>
     <script src="../node_modules/benchmark/benchmark.js"></script>
 
@@ -32,6 +33,7 @@
     <script src="speed/append.suite.js"></script>
     <script src="speed/visibility.suite.js"></script>
     <script src="speed/each.suite.js"></script>
+    <script src="speed/template.suite.js"></script>
 
     <script>
       (function() {
