add DOM.title methods

--- a/test/specs.html
+++ b/test/specs.html
@@ -46,6 +46,7 @@
     <script src="spec/visibility.spec.js"></script>
     <script src="spec/importstrings.spec.js"></script>
     <script src="spec/supports.spec.js"></script>
+    <script src="spec/title.spec.js"></script>
 
 </head>
 <body>
