add note about html5shiv, reimplement DOM.mock

--- a/test/specs.html
+++ b/test/specs.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="../.grunt/grunt-contrib-jasmine/jasmine.css">
 
+    <script src="../bower_components/html5shiv/src/html5shiv.js"></script>
 
     <script src="../node_modules/lodash/lodash.js"></script>
     <script src="../.grunt/grunt-contrib-jasmine/jasmine.js"></script>
@@ -50,6 +51,7 @@
 
 </head>
 <body>
+    <article><time>123</time></article>
     <script type="text/javascript">
     (function() {
         var jasmineEnv = jasmine.getEnv(),
