use aria-hidden to hide elements, fix jasmine tests in IE

--- a/test/specs.html
+++ b/test/specs.html
@@ -6,13 +6,13 @@
 
     <title>better-dom specs</title>
 
-    <link rel="stylesheet" href="../.grunt/grunt-contrib-jasmine/jasmine.css">
+    <link rel="stylesheet" href="../bower_components/jasmine/lib/jasmine-core/jasmine.css">
+    <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
+    <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
     <script src="../bower_components/html5shiv/src/html5shiv.js"></script>
 
     <script src="../node_modules/lodash/lodash.js"></script>
-    <script src="../.grunt/grunt-contrib-jasmine/jasmine.js"></script>
-    <script src="../.grunt/grunt-contrib-jasmine/jasmine-html.js"></script>
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
