use custom link element instead of data-htc

--- a/test/speed.html
+++ b/test/speed.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <script src="../build/better-dom.js" data-htc="../extra/better-dom.htc"></script>
+    <script src="../build/better-dom.js"></script>
     <!-- speeds -->
     <script src="speed/get.suite.js"></script>
     <script src="speed/set.suite.js"></script>
@@ -43,7 +43,7 @@
 
           var tableReporter   = new Benchmine.TableReporter();
           //var chartReporter   = new Benchmine.ChartReporter();
-          
+
           benchmineEnv.addReporter(tableReporter);
           //benchmineEnv.addReporter(chartReporter);
         }
