--- a/test/specs.html
+++ b/test/specs.html
@@ -10,14 +10,17 @@
     <script src="../bower_components/jasmine/lib/jasmine-core/jasmine.js"></script>
     <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
-    <script src="../bower_components/html5shiv/src/html5shiv.js"></script>
+    <!--[if IE]>
+        <link href="../extra/better-dom.htc" rel="better-dom-htc" />
+        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+    <![endif]-->
 
     <script src="../node_modules/lodash/lodash.js"></script>
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
 
-    <script src="../build/better-dom.js" data-htc="../extra/better-dom.htc"></script>
+    <script src="../build/better-dom.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/find.spec.js"></script>
