DOM.parseTemplate supports html strings, DOM.create and manipulation methods support whitespaced html

--- a/test/specs.html
+++ b/test/specs.html
@@ -11,7 +11,7 @@
     <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
     <!--[if IE]>
-        <link href="../extra/better-dom.htc" rel="better-dom-htc" />
+        <link href="../extra/better-dom.htc" rel="htc" />
         <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
     <![endif]-->
 
