--- a/test/specs.html
+++ b/test/specs.html
@@ -51,6 +51,7 @@
     <script src="spec/importstrings.spec.js"></script>
     <script src="spec/supports.spec.js"></script>
     <script src="spec/title.spec.js"></script>
+    <script src="spec/legacy.spec.js"></script>
 
 </head>
 <body>
