--- a/test/specs.html
+++ b/test/specs.html
@@ -52,6 +52,7 @@
     <script src="spec/supports.spec.js"></script>
     <script src="spec/title.spec.js"></script>
     <script src="spec/legacy.spec.js"></script>
+    <script src="spec/importscripts.spec.js"></script>
 
 </head>
 <body>
