--- a/test/specs.html
+++ b/test/specs.html
@@ -42,7 +42,7 @@
     <script src="spec/manipulation.spec.js"></script>
     <script src="spec/css.spec.js"></script>
     <script src="spec/extend.spec.js"></script>
-    <script src="spec/parseTemplate.spec.js"></script>
+    <script src="spec/template.spec.js"></script>
     <script src="spec/mock.spec.js"></script>
     <script src="spec/ready.spec.js"></script>
     <script src="spec/collection.spec.js"></script>
