--- a/test/specs.html
+++ b/test/specs.html
@@ -40,7 +40,7 @@
     <script src="spec/watch.spec.js"></script>
     <script src="spec/create.spec.js"></script>
     <script src="spec/manipulation.spec.js"></script>
-    <script src="spec/css.spec.js"></script>
+    <script src="spec/style.spec.js"></script>
     <script src="spec/extend.spec.js"></script>
     <script src="spec/template.spec.js"></script>
     <script src="spec/mock.spec.js"></script>
