Node should always have length property

--- a/test/specs.html
+++ b/test/specs.html
@@ -23,6 +23,7 @@
     <script src="../build/better-dom.js"></script>
 
     <!-- include spec files here... -->
+    <script src="spec/global.spec.js"></script>
     <script src="spec/find.spec.js"></script>
     <script src="spec/clone.spec.js"></script>
     <script src="spec/contains.spec.js"></script>
