--- a/test/specs.html
+++ b/test/specs.html
@@ -46,11 +46,10 @@
     <script src="spec/template.spec.js"></script>
     <script src="spec/mock.spec.js"></script>
     <script src="spec/ready.spec.js"></script>
-    <script src="spec/collection.spec.js"></script>
+    <script src="spec/functional.spec.js"></script>
     <script src="spec/importstyles.spec.js"></script>
     <script src="spec/visibility.spec.js"></script>
     <script src="spec/importstrings.spec.js"></script>
-    <script src="spec/supports.spec.js"></script>
     <script src="spec/title.spec.js"></script>
     <script src="spec/legacy.spec.js"></script>
     <script src="spec/importscripts.spec.js"></script>
