fix issues in IE8-9

--- a/test/specs.html
+++ b/test/specs.html
@@ -52,7 +52,7 @@
     <script src="spec/importstrings.spec.js"></script>
     <script src="spec/legacy.spec.js"></script>
     <script src="spec/importscripts.spec.js"></script>
-
+    <script src="spec/i18n.spec.js"></script>
 </head>
 <body>
     <script type="text/javascript">
