--- a/test/specs.html
+++ b/test/specs.html
@@ -21,35 +21,35 @@
     <script src="../build/better-dom.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/global.spec.js"></script>
-    <script src="spec/find.spec.js"></script>
-    <script src="spec/clone.spec.js"></script>
-    <script src="spec/contains.spec.js"></script>
-    <script src="spec/on.spec.js"></script>
-    <script src="spec/off.spec.js"></script>
-    <script src="spec/fire.spec.js"></script>
-    <script src="spec/data.spec.js"></script>
-    <script src="spec/get.spec.js"></script>
-    <script src="spec/set.spec.js"></script>
-    <script src="spec/traversing.spec.js"></script>
-    <script src="spec/classes.spec.js"></script>
-    <script src="spec/matches.spec.js"></script>
-    <script src="spec/offset.spec.js"></script>
-    <script src="spec/watch.spec.js"></script>
-    <script src="spec/create.spec.js"></script>
-    <script src="spec/manipulation.spec.js"></script>
-    <script src="spec/style.spec.js"></script>
-    <script src="spec/extend.spec.js"></script>
-    <script src="spec/template.spec.js"></script>
-    <script src="spec/mock.spec.js"></script>
-    <script src="spec/ready.spec.js"></script>
-    <script src="spec/functional.spec.js"></script>
-    <script src="spec/importstyles.spec.js"></script>
-    <script src="spec/visibility.spec.js"></script>
-    <script src="spec/importstrings.spec.js"></script>
-    <script src="spec/legacy.spec.js"></script>
-    <script src="spec/importscripts.spec.js"></script>
-    <script src="spec/i18n.spec.js"></script>
+    <script src="spec/node.spec.js"></script>
+    <script src="spec/node.find.spec.js"></script>
+    <script src="spec/element.clone.spec.js"></script>
+    <script src="spec/node.contains.spec.js"></script>
+    <script src="spec/node.on.spec.js"></script>
+    <script src="spec/node.off.spec.js"></script>
+    <script src="spec/node.fire.spec.js"></script>
+    <script src="spec/node.data.spec.js"></script>
+    <script src="spec/element.get.spec.js"></script>
+    <script src="spec/element.set.spec.js"></script>
+    <script src="spec/element.traversing.spec.js"></script>
+    <script src="spec/element.classes.spec.js"></script>
+    <script src="spec/element.matches.spec.js"></script>
+    <script src="spec/element.offset.spec.js"></script>
+    <script src="spec/dom.watch.spec.js"></script>
+    <script src="spec/dom.create.spec.js"></script>
+    <script src="spec/element.manipulation.spec.js"></script>
+    <script src="spec/element.style.spec.js"></script>
+    <script src="spec/dom.extend.spec.js"></script>
+    <script src="spec/dom.template.spec.js"></script>
+    <script src="spec/dom.mock.spec.js"></script>
+    <script src="spec/dom.ready.spec.js"></script>
+    <script src="spec/node.functional.spec.js"></script>
+    <script src="spec/dom.importstyles.spec.js"></script>
+    <script src="spec/element.visibility.spec.js"></script>
+    <script src="spec/dom.importstrings.spec.js"></script>
+    <script src="spec/node.functional.spec.js"></script>
+    <script src="spec/dom.importscripts.spec.js"></script>
+    <script src="spec/element.i18n.spec.js"></script>
 </head>
 <body>
     <script type="text/javascript">
