--- a/test/specs.html
+++ b/test/specs.html
@@ -11,8 +11,8 @@
     <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
     <!--[if IE]>
-        <link href="../extra/better-dom.htc" rel="htc" />
-        <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
+        <link href="../extra/better-dom-legacy.htc" rel="htc" />
+        <script src="../build/better-dom-legacy.js"></script>
     <![endif]-->
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
