--- a/test/specs.html
+++ b/test/specs.html
@@ -11,7 +11,7 @@
     <script src="../bower_components/jasmine/lib/jasmine-core/jasmine-html.js"></script>
 
     <!--[if IE]>
-        <link href="../extra/better-dom-legacy.htc" rel="htc" />
+        <link href="../dist/better-dom-legacy.htc" rel="htc" />
         <script src="../build/better-dom-legacy.js"></script>
     <![endif]-->
 
