introduce jasmine-better-dom-matchers.js

--- a/test/specs.html
+++ b/test/specs.html
@@ -17,6 +17,7 @@
 
     <script src="lib/jasmine-dom/jasmine-dom-fixtures.js"></script>
     <script src="lib/jasmine-dom/jasmine-dom-matchers.js"></script>
+    <script src="lib/jasmine-better-dom-matchers.js"></script>
 
     <script src="../build/better-dom.js"></script>
 
