extract invoke method from fire

--- a/test/specs.html
+++ b/test/specs.html
@@ -22,6 +22,7 @@
     <!-- include spec files here... -->
     <script src="spec/node.spec.js"></script>
     <script src="spec/node.find.spec.js"></script>
+    <script src="spec/node.invoke.spec.js"></script>
     <script src="spec/element.clone.spec.js"></script>
     <script src="spec/node.contains.spec.js"></script>
     <script src="spec/node.on.spec.js"></script>
