--- a/test/specs.html
+++ b/test/specs.html
@@ -49,6 +49,7 @@
     <script src="spec/node.functional.spec.js"></script>
     <script src="spec/dom.importscripts.spec.js"></script>
     <script src="spec/element.i18n.spec.js"></script>
+    <script src="spec/element.watch.spec.js"></script>
 </head>
 <body>
     <script type="text/javascript">
